--- a/css/table-cell_mq.css
+++ b/css/table-cell_mq.css
@@ -1,6 +1,6 @@
 @media (max-width: 575.98px) {
-  .content {
-    padding: 4rem 1rem 0 1rem;
+  .container_main {
+    padding: 3rem 1rem 0 1rem;
   }
 
   .container,
@@ -17,8 +17,8 @@
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
-  .content {
-    padding-top: 6rem;
+  .container_main {
+    padding-top: 3rem;
   }
 
   .element {
@@ -29,10 +29,6 @@
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
-  .content {
-    padding: 6rem 2rem 0 2rem;
-  }
-
   .element {
     font-size: 14px;
     width: 50px;
@@ -41,10 +37,6 @@
 }
 
 @media (min-width: 992px) and (max-width: 1199.98px) {
-  .content {
-    padding: 6rem 2rem 0 2rem;
-  }
-
   .element {
     font-size: 14px;
     width: 50px;
