--- a/css/main-menu.css
+++ b/css/main-menu.css
@@ -1,36 +1,43 @@
 @import url("https://fonts.googleapis.com/css2?family=Black+And+White+Picture&family=Creepster&family=Dangrek&family=Flavors&family=Rubik+Moonrocks&family=Sunshiney&display=swap");
 
+body {
+  background-color: #f7ecde;
+}
+
 .container_menu {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  font-family: "Dangrek", cursive;
   justify-content: center;
   align-content: center;
   padding: 3rem;
-  gap: 2rem;
+  gap: 3rem;
 }
 
 .button_submit {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Dangrek", cursive;
-  background: #f14668;
-  border-radius: 8px;
+  background: #795548;
+  border-radius: 50px 8px;
   width: 100%;
   height: 80px;
-  border: none;
+  border: 4px dashed #795548;
   color: white;
   font-size: 18px;
   text-decoration: none;
-  transition: 1s all ease;
   -webkit-appearance: none;
   box-shadow: 9px 13px 3px 0px #f8b400;
   -webkit-box-shadow: 9px 13px 3px 0px #f8b400;
 }
 
 .button_submit:hover {
-  background-color: #ff7171;
+  background-color: #f8b400;
   transition: color 0.2s 0.05s ease;
+  border-radius: 50px 8px;
+  border: 4px dashed #795548;
+  color: black;
+  box-shadow: none;
   cursor: pointer;
 }
 
