--- a/css/header.css
+++ b/css/header.css
@@ -1,20 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Black+And+White+Picture&family=Creepster&family=Flavors&family=Rubik+Moonrocks&family=Sunshiney&display=swap");
+
 body {
+  font-family: "Rubik Moonrocks", cursive;
   margin: 0;
-  background: #f7f4f4;
 }
 
 .header {
   display: grid;
   grid-template-columns: 100px 1fr 100px;
   box-shadow: 0px 7px 8px -8px #f3bad6;
-  background: #fffdf9;
+  background: #4c3a51;
+  color: white;
   width: 100%;
-  height: 50px;
 }
 
 .header img {
-  width: 30px;
-  margin: 12px;
+  width: 45px;
+  margin: 10px;
   animation: roll 3s infinite;
   transform: rotate(30deg);
 }
@@ -35,14 +37,14 @@ body {
 }
 
 .icon {
-  color: #bccddf;
-  font-size: 24px;
+  color: #ffffff;
+  font-size: 2.6rem;
   text-align: right;
-  margin: 10px;
+  margin: 0px 16px;
 }
 
 .icon:hover {
-  color: #900c3f;
+  color: #ffc107;
   cursor: pointer;
 }
 
@@ -50,7 +52,12 @@ body {
   .header {
     grid-template-columns: 50px 1fr 50px;
   }
+
   .header p {
     font-size: larger;
+  }
+
+  .icon {
+    margin: 0;
   }
 }
