feat: center the logo and header text

--- a/css/header.css
+++ b/css/header.css
@@ -14,9 +14,15 @@ body {
   width: 100%;
 }
 
+.header a {
+  display: flex;
+  align-items: center;
+  margin-left: 1rem;
+  height: 100%;
+}
+
 .header img {
   width: 45px;
-  margin: 10px;
   animation: roll 3s infinite;
   transform: rotate(30deg);
 }
@@ -32,15 +38,18 @@ body {
 
 .header p {
   font-size: x-large;
-  margin: 10px 0;
+  margin: 10px;
   text-align: center;
 }
 
 .icon {
-  color: #ffffff;
+  display: flex;
+  align-items: center;
+  place-self: end;
   font-size: 2.6rem;
-  text-align: right;
-  margin: 0px 16px;
+  margin-right: 1rem;
+  color: #ffffff;
+  height: 100%;
 }
 
 .icon:hover {
@@ -54,10 +63,10 @@ body {
   }
 
   .header p {
-    font-size: larger;
+    font-size: 22px;
+    margin: 10px 30px;
   }
-
   .icon {
-    margin: 0;
+    margin-right: 0.5rem;
   }
 }
