chore: center the text of the menu buttons

--- a/css/main-menu.css
+++ b/css/main-menu.css
@@ -20,7 +20,7 @@ body {
   align-items: center;
   background: #795548;
   border-radius: 50px 8px;
-  width: 100%;
+  text-align: center;
   height: 80px;
   border: 4px dashed #795548;
   color: white;
